# confidence

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  LICENSE  README.md  README.rst  check-requirements.in  check-requirements.txt  confidence.py  configuration.py  mypy.ini  noxfile.py  pdm.toml  pylock.toml  pyproject.toml  requirements.txt  setup.py  test-requirements.in  test-requirements.txt  tox.ini
.github/: compare-benchmarks.py  latest-changes.py
.github/workflows/: release.yml  test.yml
confidence/: __init__.py  exceptions.py  formats.py  io.py  models.py  secrets.py  types.py  utils.py
docs/: .readthedocs.yaml  api.rst  conf.py  examples.rst  glossary.rst  index.md  index.rst  mkdocs.yaml  recipes.rst  use.rst
docs/reference/: exceptions.md  loading.md  manipulation.md  objects.md
docs/usage/: loading.md  runtime.md
test/: config.json  config.yaml  test_defaults.py  test_dict.py  test_io.py  test_namespace.py  test_precedence.py  test_reader.py  test_utils.py
tests/: config.yaml  conftest.py  test_benchmarks.py  test_defaults.py  test_dict.py  test_formats.py  test_init.py  test_io.py  test_loaders.py  test_namespace.py  test_pickling.py  test_precedence.py  test_references.py  test_sequence.py  test_utils.py
tests/files/: bar.yaml  comments.yaml  complicated.yaml  config.toml  foo.yaml
