[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
dynamic = ["version"]  # determined from source control, see tool.pdm.version below
name = "confidence"
description = "Simple module to load and use configuration in a clean, 'pythonic' way."
keywords = ["configuration"]
readme = "README.md"
authors = [
    {name = "Netherlands Forensic Institute", email = "netherlandsforensicinstitute@users.noreply.github.com"},
]
dependencies = [
    "pyyaml",
]
requires-python = ">=3.9"
license = {text = "Apache Software License 2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/NetherlandsForensicInstitute/confidence/"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.dev-dependencies]
check = [
    "mypy",
    "ruff",
    # dependency-specific typing information
    "types-pyyaml",
]
test = [
    "coverage",
    "pytest",
]

[tool.pdm.scripts]
# pre_build hook: create README.md from README.md (omitting the badges) and CHANGES.md
pre_build = {shell ="""
    mv README.md README.md.orig &&
    tail --lines=+3 README.md.orig > README.md &&
    cat CHANGES.md >> README.md
"""}
# post_build hook: reinstate original README.md
post_build = {shell = """
    mv README.md.orig README.md
"""}

# development scripts
all = {composite = ["check", "test"]}
check = {composite = ["format", "lint", "type-check"]}
format = {cmd = ["ruff", "format", "--diff", "confidence/", "tests/"]}
lint = {cmd = ["ruff", "check", "confidence/", "tests/"]}
test = {cmd = [
    "coverage", "run",
    "--branch",
    "--source", "confidence",
    "--module", "pytest",
    "--strict-markers",
    "tests/",
]}
type-check = {cmd = ["mypy", "confidence/"]}

[tool.ruff]
format.quote-style = "single"
line-length = 120
lint.flake8-quotes.inline-quotes = "single"
lint.ignore = [
    # enforced by the formatter, not ignoring this causes warnings
    "COM812",
    # 'r' is the default mode for builtin open(), but explicit is better than implicit
    "UP015",
]
lint.isort.lines-after-imports = 2
lint.select = ["A", "B", "COM", "C4", "DTZ", "E", "F", "I", "N", "Q", "SIM", "UP"]

[tool.mypy]
# allow redefinition of inferred / assigned types
allow_redefinition = true
# require all defined functions to be fully typed
allow_incomplete_defs = false
allow_untyped_defs = false
# be strict about optional types
strict_optional = true
# warn about lines in this file that make no sense to mypy
warn_unused_configs = true
