[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
dynamic = ["version"]  # determined from source control
name = "confidence"
description = "Simple module to load and use configuration in a clean, 'pythonic' way."
keywords = ["configuration"]
readme = "README.md"
authors = [
    {name = "Netherlands Forensic Institute", email = "netherlandsforensicinstitute@users.noreply.github.com"},
]
dependencies = [
    "tomlkit>=0.13.3",
    "pyyaml>=6.0",
]
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/NetherlandsForensicInstitute/confidence/"

[tool.pdm]
version = {source = "scm"}

[dependency-groups]
check = [
    "mypy",
    "ruff",
    # dependency-specific typing information
    "types-pyyaml",
]
test = [
    "coverage",
    "pytest",
    "pytest-benchmark",
]

[tool.pdm.scripts]
all = {composite = ["check", "test"]}
check = {composite = ["check-lock", "format", "lint", "type-check"]}
check-lock = "pdm lock --check"
format = "ruff format --diff confidence/ tests/"
lint = "ruff check confidence/ tests/"
test = "coverage run --branch --source confidence --module pytest --strict-markers tests/"
type-check = "mypy confidence/"
update-lock = "pdm lock --group :all"

[tool.ruff]
format.quote-style = "single"
line-length = 120
lint.flake8-builtins.ignorelist = ["format"]
lint.flake8-quotes.inline-quotes = "single"
lint.ignore = [
    # enforced by the formatter, not ignoring this causes warnings
    "COM812",
    # 'r' is the default mode for builtin open(), but explicit is better than implicit
    "UP015",
]
lint.isort.lines-after-imports = 2
# ruff disagrees with the way __all__ is manipulated in the root module, ignore F401 (unused import) for that file
lint.per-file-ignores = {"confidence/__init__.py" = ["F401"]}
lint.select = ["A", "B", "COM", "C4", "DTZ", "E", "F", "I", "N", "PTH", "Q", "SIM", "UP"]

[tool.mypy]
# allow redefinition of inferred / assigned types
allow_redefinition = true
# require all defined functions to be fully typed
allow_incomplete_defs = false
allow_untyped_defs = false
# be strict about optional types
strict_optional = true
# warn about lines in this file that make no sense to mypy
warn_unused_configs = true

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]
